@@ -140,6 +140,7 @@
   (global-auto-complete-mode t)
   (add-to-list 'ac-trigger-commands 'org-self-insert-command)
   (add-to-list 'ac-modes 'org-mode)
+  (add-to-list 'ac-modes 'change-log-mode)
   (add-to-list 'ac-modes 'objc-mode)
   (add-to-list 'ac-modes 'jde-mode))
 (when (require 'auto-complete-config nil t)
